Use sphinx jsonschema (#11)
* Extend .gitignore

* Replace widget.js with sphinx-jsonschema package

* Remove docson from project

* Update 'Create new schema' section

* Fix bugs with unicode in docs.py

* Remove generatable rst-files from git

* Fix docs.py

* Add minimal info to README.md

* Fix docs.py to get relative path for json schemas

* Remove schemas/ from .gitignore

* Add rst-files to repository

* Minor fix with schema pattern

* Change Schema ID in example

* Remove references in json-schemas & fix schema id

* Change a look of the schema ID

* Remove "current use" field from the schema

* Fix paths to schemas json

--- a/docs/source/schemas/06/06.rst
+++ b/docs/source/schemas/06/06.rst
@@ -17,7 +17,7 @@ version 001
 
 `Schema 06`_
 
-.. _`Schema 06`: ../../../../../openprocurement/schemas/dgf/schemas/06/schema_001.json
+.. _`Schema 06`: /06/schema_001.json
 
 
 
