--- a/docs/source/schemas/06/1/061.rst
+++ b/docs/source/schemas/06/1/061.rst
@@ -17,7 +17,7 @@ version 001
 
 `Schema 061`_
 
-.. _`Schema 061`: ../../../../../../openprocurement/schemas/dgf/schemas/06/1/schema_001.json
+.. _`Schema 061`: /06/1/schema_001.json
 
 
 
