--- a/docs/source/schemas/06/06.rst
+++ b/docs/source/schemas/06/06.rst
@@ -14,10 +14,10 @@ version 001
 
 .. jsonschema:: ../../../../openprocurement/schemas/dgf/schemas/06/schema_001.json
 
+In jsonschema format:
 
-`Schema 06`_
-
-.. _`Schema 06`: /06/schema_001.json
+.. include:: ../../../../openprocurement/schemas/dgf/schemas/06/schema_001.json
+    :code:
 
 
 
