--- a/docs/source/schemas/06/1/061.rst
+++ b/docs/source/schemas/06/1/061.rst
@@ -14,10 +14,10 @@ version 001
 
 .. jsonschema:: ../../../../../openprocurement/schemas/dgf/schemas/06/1/schema_001.json
 
+In jsonschema format:
 
-`Schema 061`_
-
-.. _`Schema 061`: /06/1/schema_001.json
+.. include:: ../../../../../openprocurement/schemas/dgf/schemas/06/1/schema_001.json
+    :code:
 
 
 
